# lesson-notes

./: .envrc.example  .gitignore  Cargo.toml  README.md  netlify.toml  package.json  pnpm-lock.yaml  shell.nix.example  spec.md  svelte.config.js  tailwind.config.cjs
api/: create.rs  view.rs
api/notes/: hello.rs
netlify/functions/create/: create.ts  package-lock.json  package.json  pnpm-lock.yaml
src/: app.css  app.html
src-rs/: lib.rs
src/lib/: DisplaySection.svelte  Modal.svelte  PracticeItemForm.svelte  notesData.ts  practiceItem.ts
src/routes/: +page.svelte
src/routes/view/[id]/: +page.server.ts  +page.svelte  +page.ts
